--- a/Exercice6/index.html
+++ b/Exercice6/index.html
@@ -1,11 +1,9 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="fr">
 <head>
     <title>Calculatrice Interactive</title>
     <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
 <div class="calculator">
     <input type="text" id="display" readonly>
@@ -28,5 +26,4 @@
 </div>
 <script src="./index.js"></script>
 </body>
-
 </html>
